--- a/src/sass/_experience.scss
+++ b/src/sass/_experience.scss
@@ -20,8 +20,7 @@
 
 		.vertical-timeline-element-content {
 			@include mq(768px) {
-				width: 100% !important;
-				word-wrap: break-word;
+				width: 80% !important;
 			}
 		}
 	}
